hphp/hack/test/typecheck/assign_to_function_invocation.php.exp
File "assign_to_function_invocation.php", line 4, characters 19-33:
Invalid lvalue (Parsing[1002])
